--- a/index.html
+++ b/index.html
@@ -3,40 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roman Ring - Personal Website</title>
+    <title>Isaac Omolayo - Personal Website</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <h1>ROMAN RING</h1>
-        <nav>
+    <div class="container">
+        <!-- Left Panel -->
+        <div class="left-panel">
+            <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
+            <h1>Isaac Omolayo</h1>
+            <h2>Senior Data Engineer</h2>
+            <p>Atlanta, GA</p>
+            <div class="social-links">
+                <a href="mailto:olasehinde.isaac.omolayo@gmail.com"><img src="images/email-icon.png" alt="Email"></a>
+                <a href="https://www.linkedin.com/in/isaac-omolayo-78b18691/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
+                <a href="https://github.com" target="_blank"><img src="images/github-icon.png" alt="GitHub"></a>
+                <a href="https://medium.com/@yTechk" target="_blank"><img src="images/medium-icon.png" alt="Medium"></a>
+            </div>
+        </div>
+
+        <!-- Right Panel -->
+        <div class="right-panel">
+            <!-- About Me Section -->
+            <h2>About Me</h2>
+            <p>
+                Accomplished Senior Data Engineer with expertise in designing, developing, and maintaining large-scale data systems. Proven track record of delivering high-performing data pipelines, architectures, and solutions that drive business growth.
+            </p>
+            <button class="download-cv">Download CV</button>
+
+            <!-- Education Section -->
+            <h2>Education</h2>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="posts.html">Posts</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="talks.html">Talks</a></li>
-                <li><a href="teaching.html">Teaching</a></li>
-                <li><a href="cv.html">CV</a></li>
+                <li><b>Master of Science (M.Sc), Statistics</b> - Georgia State University, Atlanta, GA (May 2025, GPA: 4.0)</li>
+                <li><b>Bachelor of Technology (B.Tech.), Statistics</b> - Federal University of Technology, Akure, Nigeria (Nov 2018, GPA: 3.33)</li>
             </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="bio">
-            <img src="images/Isaac_Omolayo.jpg" alt="Profile Picture">
-            <h2>Roman Ring</h2>
-            <p>Research Engineer<br>DeepMind</p>
-        </section>
-        <section class="biography">
-            <h2>Biography</h2>
-            <p>I began my career as a self-taught web developer, specializing in Symfony PHP framework...</p>
-        </section>
-    </main>
-    <footer>
-        <ul>
-            <li><a href="https://linkedin.com">LinkedIn</a></li>
-            <li><a href="https://twitter.com">Twitter</a></li>
-            <li><a href="https://github.com">GitHub</a></li>
-        </ul>
-    </footer>
+
+            <!-- Certifications Section -->
+            <h2>Certifications</h2>
+            <ul>
+                <li>Azure Data Engineer Associate, Microsoft (2024)</li>
+                <li>AWS Developer Associate, AWS (2024)</li>
+                <li>Data Fundamentals, IBM (2023)</li>
+                <li>Cloud Computing Fundamentals, IBM (2023)</li>
+                <li>Apache Cassandra Developer & Administrator, DataStax (2021)</li>
+                <li>Python PCEP, Python Institute (2020)</li>
+            </ul>
+
+            <!-- Career Experience Section -->
+            <h2>Career Experience</h2>
+            <ul>
+                <li>
+                    <b>Senior Data Engineer</b> - Data2Bots Inc., Netherlands (02/2023 - Present)
+                    <ul>
+                        <li>Implemented big data pipelines using Apache Spark, Python, and Scala.</li>
+                        <li>Designed migration solutions for on-premise AMI data to AWS.</li>
+                        <li>Developed and deployed Airflow DAGs for data processing and ETL workflows.</li>
+                    </ul>
+                </li>
+                <li>
+                    <b>Data Engineer</b> - Educative Inc., Bellevue, WA (02/2023 - 08/2023)
+                    <ul>
+                        <li>Authored a 50+ page course on Terraform (AWS) for Data Engineers.</li>
+                    </ul>
+                </li>
+                <li>
+                    <b>Senior Data Engineer</b> - Anant Corporation, Washington, DC (10/2021 - 02/2023)
+                    <ul>
+                        <li>Designed Azure Delta Lake data validation framework using Python.</li>
+                        <li>Created ETL pipelines with Azure Data Factory and Databricks.</li>
+                        <li>Implemented real-time data streaming with Azure EventHub.</li>
+                    </ul>
+                </li>
+                <li>
+                    <b>Data Engineer</b> - Cndro LLC, Houston, TX (04/2019 - 09/2021)
+                    <ul>
+                        <li>Maintained data engineering processes for economic and weather data.</li>
+                        <li>Executed SQL queries for forecasting and data profiling.</li>
+                    </ul>
+                </li>
+            </ul>
+
+            <!-- Technical Skills Section -->
+            <h2>Technical Proficiencies</h2>
+            <p>
+                Python, PySpark, R, Scala (Spark), ANSI SQL, Snowflake, PostgreSQL, NoSQL, Kafka, Hadoop, Airflow, Databricks, Azure, AWS, Terraform, and more.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
