include the right content

--- a/experience.html
+++ b/experience.html
@@ -71,14 +71,27 @@
     <h2 class="mb-5">Experience</h2>
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
-    <div class="resume-content mr-auto">
-    <h3 class="mb-0">Senior Web Developer</h3>
-    <div class="subheading mb-3">Intelitec Solutions</div>
-    <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-    </div>
-    <div class="resume-date text-md-right">
-    <span class="text-primary">March 2013 - Present</span>
-    </div>
+      <div class="resume-content mr-auto">
+          <h3 class="mb-0">Senior Data Engineer</h3>
+          <div class="subheading mb-3">Data2Bots Inc., Gelderland, Netherlands</div>
+          <p>
+              <ul>
+                  <li>Implemented big data pipeline on both Cloudera and Hortonworks software distributions from relational databases like Oracle, Teradata to AWS Simple Storage Service (S3) using Apache Spark, Python, and Scala.</li>
+                  <li>Designed solution to migrate on-premise AMI (smart meter) data to AWS ensuring consistency between on-prem legacy script and refactored AWS scripts before on-premise service deprecation.</li>
+                  <li>Collaborated with multiple teams to identify, and fix design/architectural and technical issues.</li>
+                  <li>Responsible for user acceptance testing, change management and deployment review.</li>
+                  <li>Worked on various projects to develop and deploy lambda functions using Node.js and Java to create reliable and secure endpoints.</li>
+                  <li>Created an Airflow DAG for the ETL to execute batch jobs that create views from raw layer of the data warehouse. Another DAG was created to process JSON docs on S3 into Snowflakes schema creation.</li>
+                  <li>Used AWS services like AWS Gateway, S3, and DynamoDB to create scalable and efficient lambda functions.</li>
+                  <li>Implemented real-time data ingestion using Apache Kafka (AWS Kinesis) that ingest data into raw layer of the data warehouse of the snowflakes so that views are created for reports creation.</li>
+                  <li>Used JDBC and DAO layers to offer abstraction for the business from the database related code (CRUD): used Junit, Maven and Log4j for testing and logging information.</li>
+                  <li>Pushed the boundaries of open-source Iceberg and Spark for real-time ingestion.</li>
+              </ul>
+          </p>
+      </div>
+      <div class="resume-date text-md-right">
+          <span class="text-primary">02/2023 - Present</span>
+      </div>
     </div>
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
