--- a/experience.html
+++ b/experience.html
@@ -72,6 +72,22 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
+      <h3 class="mb-0">Graduate Assistant</h3>
+      <div class="subheading mb-3">Atlanta, Georgia</div>
+      <p>
+        <ul>
+            <li>Train students on using Excel and problems solving in statistics.</li>
+            <li>Provide one-on-one sections to the students on statistics problems.</li>
+        </ul>
+      </p>
+      </div>
+      <div class="resume-date text-md-right">
+      <span class="text-primary">February 2023 - August 2023</span>
+      </div>
+    </div>
+
+    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+      <div class="resume-content mr-auto">
           <h3 class="mb-0">Senior Data Engineer</h3>
           <div class="subheading mb-3">Data2Bots Inc., Gelderland, Netherlands</div>
           <p>
@@ -90,40 +106,63 @@
           </p>
       </div>
       <div class="resume-date text-md-right">
-          <span class="text-primary">02/2023 - Present</span>
+          <span class="text-primary">February 2023 - August 2023</span>
       </div>
     </div>
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
     <div class="resume-content mr-auto">
-    <h3 class="mb-0">Web Developer</h3>
-    <div class="subheading mb-3">Intelitec Solutions</div>
-    <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+    <h3 class="mb-0">Data Engineer</h3>
+    <div class="subheading mb-3">Educative Inc, Bellevue, WA</div>
+    <p><ul><li>Wrote a 50+ page course on Terraform (AWS) for Data Engineers.</li></ul></p>
     </div>
     <div class="resume-date text-md-right">
-    <span class="text-primary">December 2011 - March 2013</span>
+    <span class="text-primary">February 2023 - August 2023</span>
     </div>
     </div>
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
     <div class="resume-content mr-auto">
-    <h3 class="mb-0">Junior Web Designer</h3>
-    <div class="subheading mb-3">Shout! Media Productions</div>
-    <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+    <h3 class="mb-0">Senior Data Engineer</h3>
+    <div class="subheading mb-3">Anant Corporation, Washington, DC</div>
+    <p>
+      <ul>
+          <li>Designed a Data Quality framework for my company's Azure delta lake data validation automation using Great Expectation in Python. Configured Azure appInsight for logging runtime information.</li>
+          <li>Created a data pipeline for vendor's ETL process on Azure and productionized the job.</li>
+          <li>Designed and implemented a real-time data streaming solution using Azure EventHub to process incoming data from IoT devices, ensuring low-latency data ingestion.</li>
+          <li>Used Azure Service bus for message queueing to alert downstream engineering team when periodic ETL process was completed.</li>
+          <li>Integrated Azure Data Factory into the data pipeline to orchestrate and schedule ETL processes to ensure data freshness. Leveraged retries and error handling to ensure successful orchestration completion.</li>
+          <li>Used Azure Databricks for advanced data transformations, flatten nested JSON, deduplication, change data capture (CDC), and maintaining historical data records for compliance and auditing.</li>
+          <li>Implemented Change Data Capture (CDC) mechanisms for schema changes and row version changes. Architected event-driven systems using Azure Event Grid and Azure Event Hubs for real-time data synchronization and processing.</li>
+          <li>Automated data quality checks in Databricks to validate and clean incoming data, ensuring high data integrity and adherence to business rules.</li>
+          <li>Designed and managed HiveMetaStore for centralized metadata storage, optimized Trino for distributed SQL querying, and implemented Apache Pinot for real-time OLAP workloads.</li>
+          <li>Created the ETL process using Python to identify active loyalty members and transfer the data to financial business partners to determine the creditworthiness of each member.</li>
+          <li>Managed the data integrity phase of data migration from on-prem (Hadoop) to MS Azure (Cloud).</li>
+          <li>Utilized Azure DevOps for CI/CD pipeline management, ensuring efficient and timely deployment of Azure Functions.</li>
+      </ul>
+    </p>
     </div>
     <div class="resume-date text-md-right">
-    <span class="text-primary">July 2010 - December 2011</span>
+    <span class="text-primary">October 2021 - February 2023</span>
     </div>
     </div>
 
     <div class="resume-item d-flex flex-column flex-md-row">
     <div class="resume-content mr-auto">
-    <h3 class="mb-0">Web Design Intern</h3>
-    <div class="subheading mb-3">Shout! Media Productions</div>
-    <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+    <h3 class="mb-0">Data Engineer</h3>
+    <div class="subheading mb-3">CNDRO LLC</div>
+    <p>
+      <ul>
+          <li>Created a downstream table for economic data from Moodys and weather data from IBM.</li>
+          <li>Implemented strategies for efficient data partitioning and indexing to support fast query performance for forecasting models on Hadoop.</li>
+          <li>Constructed and executed complex SQL queries, while leveraging data profiling tools to verify business data rules and fit-for-use status of data under analysis.</li>
+          <li>Maintain batch jobs that support energy trading team processes on task scheduler.</li>
+          <li>Maintain data engineering team code base on Bitbucket.</li>
+      </ul>
+    </p>
     </div>
     <div class="resume-date text-md-right">
-    <span class="text-primary">September 2008 - June 2010</span>
+    <span class="text-primary">April 2019 - September 2021</span>
     </div>
     </div>
 
