--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
           <h1 class="mb-0">Isaac
             <span class="text-primary">Omolayo</span>
           </h1>
-          <div class="subheading mb-5" style="font-size: small; text-transform: capitalize;">Atlanta, GA · (678) 531-2085 ·
+          <div class="subheading mb-5" style="font-size: medium; text-transform: capitalize;">Atlanta, GA · (678) 531-2085 ·
             <a href="mailto:oomolayo2@gsu.edu">oomolayo2@gsu.edu</a>
           </div>
           <p class="mb-5">Accomplished Senior data engineer with expertise in designing, developing, and maintaining large-scale data systems; having 
