--- a/awards.html
+++ b/awards.html
@@ -66,38 +66,39 @@
 
 <div class="container-fluid p-0">
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-        <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
-          <ul class="fa-ul mb-0">
+      <div class="my-auto">
+        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                Azure Data Engineer Associate, Microsoft, 2024
+            </li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                AWS Developer Associate, AWS, 2024
+            </li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                Data Fundamentals, IBM, 2023
+            </li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                Cloud Computing Fundamentals, IBM, 2023
+            </li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                Apache Cassandra Associate Developer, DataStax, 2021
+            </li>
             <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                Apache Cassandra Associate Administrator, DataStax, 2021
+            </li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-          </ul>
-        </div>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                Python PCEP, Python Institute, 2020
+            </li>
+        </ul>
+      </div>    
       </section>
 </div>
 
