--- a/experience.html
+++ b/experience.html
@@ -73,7 +73,7 @@
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
       <h3 class="mb-0">Graduate Assistant</h3>
-      <div class="subheading mb-3">Atlanta, Georgia</div>
+      <div class="subheading mb-3">Georgia State University, Alanta, GA</div>
       <p>
         <ul>
             <li>Train students on using Excel and problems solving in statistics.</li>
@@ -150,7 +150,7 @@
     <div class="resume-item d-flex flex-column flex-md-row">
     <div class="resume-content mr-auto">
     <h3 class="mb-0">Data Engineer</h3>
-    <div class="subheading mb-3">CNDRO LLC</div>
+    <div class="subheading mb-3">CNDRO LLC, Houston, Texas</div>
     <p>
       <ul>
           <li>Created a downstream table for economic data from Moodys and weather data from IBM.</li>
@@ -164,6 +164,42 @@
     <div class="resume-date text-md-right">
     <span class="text-primary">April 2019 - September 2021</span>
     </div>
+    </div>
+
+    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+      <div class="resume-content mr-auto">
+          <h3 class="mb-0">Statistician</h3>
+          <div class="subheading mb-3">Oyo State Bureau of Statistics Ibadan, Oyo State, Nigeria</div>
+          <p>
+            <ul>
+                <li>Work as one of the data enumerators for field surveys.</li>
+                <li>Provide daily and weekly reports to the survey supervisor.</li>
+                <li>Responsible for data cleaning and data error handling tasks.</li>
+                <li>Responsible for sorting of enumeration forms (EA) according to Local Government Area in Oyo state for every survey.</li>
+            </ul>
+          </p>
+      </div>
+      <div class="resume-date text-md-right">
+          <span class="text-primary">April 2019 - April 2020</span>
+      </div>
+    </div>
+
+    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+      <div class="resume-content mr-auto">
+          <h3 class="mb-0">Managerial Associate</h3>
+          <div class="subheading mb-3">GreenTurn, London, United Kingdom</div>
+          <p>
+            <ul>
+                <li>Responsible for modeling business processes for clients for better improvements of business processes.</li>
+                <li>Gave weekly and monthly reports to the senior managers for restructuring purposes.</li>
+                <li>Engaged in the interpretation of business models to the domain experts.</li>
+                <li>Wrote 360 pages of the report on business process modeling.</li>
+            </ul>
+        </p>        
+      </div>
+      <div class="resume-date text-md-right">
+          <span class="text-primary">2017 - 2018</span>
+      </div>
     </div>
 
     </div>
