--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 <div class="container-fluid p-0">
   <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
     <div class="my-auto">
-      <h1 class="mb-0">Isaac
+      <h1 class="mb-0" style="text-transform: none; font-size: inherit;">Isaac
         <span class="text-primary">Omolayo</span>
       </h1>
-      <div class="subheading mb-5">Atlanta, GA · (678) 531-2085 ·
-        <a href="mailto:name@email.com">olasehinde.isaac.omolayo@gmail.com</a>
+      <div class="subheading mb-5" style="text-transform: none; font-size: inherit;">Atlanta, GA · (678) 531-2085 ·
+        <a href="mailto:olasehinde.isaac.omolayo@gmail.com" style="text-transform: none; color: inherit;">olasehinde.isaac.omolayo@gmail.com</a>
       </div>
       <p class="mb-5">Accomplished Senior data engineer with expertise in designing, developing, and maintaining large-scale data systems; having 
         a proven track record of delivering high-performing data pipelines, architectures, and solutions that drive business growth.</p>
