correct the font size

--- a/about.html
+++ b/about.html
@@ -67,11 +67,11 @@
 <div class="container-fluid p-0">
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Isaac
+          <h1 class="mb-0" style="text-transform: none;">Isaac
             <span class="text-primary">Omolayo</span>
           </h1>
-          <div class="subheading mb-5" style="font-size: medium; text-transform: capitalize;">Atlanta, GA · (678) 531-2085 ·
-            <a href="mailto:oomolayo2@gsu.edu">oomolayo2@gsu.edu</a>
+          <div class="subheading mb-5" style="text-transform: none;">Atlanta, GA · (678) 531-2085 ·
+            <a href="mailto:oomolayo2@gsu.edu"  style="text-transform: none; color: inherit;">oomolayo2@gsu.edu</a>
           </div>
           <p class="mb-5">Accomplished Senior data engineer with expertise in designing, developing, and maintaining large-scale data systems; having 
             a proven track record of delivering high-performing data pipelines, architectures, and solutions that drive business growth.</p>
