--- a/experience.html
+++ b/experience.html
@@ -82,7 +82,7 @@
       </p>
       </div>
       <div class="resume-date text-md-right">
-      <span class="text-primary">February 2023 - August 2023</span>
+      <span class="text-primary">February 2023 - Present</span>
       </div>
     </div>
 
