pan the duration on the right

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/isaac-omolayo-78b18691/">
             <span class="fa-stack fa-lg">
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -102,7 +102,7 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a href="#">
+          <a href="https://github.com/yTek01">
             <span class="fa-stack fa-lg">
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-github fa-stack-1x fa-inverse"></i>
