--- a/skills.html
+++ b/skills.html
@@ -109,17 +109,53 @@
           <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+                <i class="fa-li fa fa-check"></i>
+                Data Analysis
+            </li>
             <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+                <i class="fa-li fa fa-check"></i>
+                Data Modeling
+            </li>
             <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+                <i class="fa-li fa fa-check"></i>
+                Statistical Analysis
+            </li>
             <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+                <i class="fa-li fa fa-check"></i>
+                Software Engineering
+            </li>
+            <li>
+                <i class="fa-li fa fa-check"></i>
+                Data Engineering
+            </li>
+            <li>
+                <i class="fa-li fa fa-check"></i>
+                Data Science
+            </li>
+            <li>
+                <i class="fa-li fa fa-check"></i>
+                Content Creation
+            </li>
+            <li>
+                <i class="fa-li fa fa-check"></i>
+                Extract Transform Load
+            </li>
+            <li>
+                <i class="fa-li fa fa-check"></i>
+                Data Warehouse
+            </li>
+            <li>
+                <i class="fa-li fa fa-check"></i>
+                Database Administration
+            </li>
+            <li>
+                <i class="fa-li fa fa-check"></i>
+                Business Process Modeling &amp; Management
+            </li>
+            <li>
+                <i class="fa-li fa fa-check"></i>
+                Machine Learning
+            </li>
           </ul>
         </div>
       </section>
