--- a/education.html
+++ b/education.html
@@ -71,19 +71,21 @@
     
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-                <h3 class="mb-0">Master of Science (M.Sc), Statistics</h3>
-                <div class="subheading mb-3">Georgia State University</div>
-                <div>Atlanta, GA - May 2025</div>
+                <h3 class="mb-0" style="text-transform: none;">Master of Science (M.Sc), Statistics</h3>
+                <div class="subheading mb-3" style="text-transform: none;">Georgia State University, Atlanta, GA</div>
+                <div>May 2025</div>
                 <p>GPA: 4.0</p>
             </div>
         </div>
     
         <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-                <h3 class="mb-0">Bachelor of Technology (B.Tech), Statistics</h3>
-                <div class="subheading mb-3">Federal University of Technology, Akure</div>
-                <div>Nigeria - November 2018</div>
-                <p>GPA: 3.33</p>
+                <h3 class="mb-0" style="text-transform: none;">Bachelor of Technology (B.Tech), Statistics</h3>
+                <div class="subheading mb-3" style="text-transform: none;">Federal University of Technology, Akure, Nigeria</div>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary">November 2018</span>
+                  <p>GPA: 3.33</p>
+                  </div>
             </div>
         </div>
       </div>    
