use small leterrs for experiences

--- a/experience.html
+++ b/experience.html
@@ -72,8 +72,8 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-      <h3 class="mb-0">Graduate Assistant</h3>
-      <div class="subheading mb-3">Georgia State University, Alanta, GA</div>
+      <h3 class="mb-0" style="text-transform: none;">Graduate Assistant</h3>
+      <div class="subheading mb-3" style="text-transform: none;">Georgia State University, Alanta, GA</div>
       <p>
         <ul>
             <li>Train students on using Excel and problems solving in statistics.</li>
@@ -88,8 +88,8 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-          <h3 class="mb-0">Senior Data Engineer</h3>
-          <div class="subheading mb-3">Data2Bots Inc., Gelderland, Netherlands</div>
+          <h3 class="mb-0" style="text-transform: none;">Senior Data Engineer</h3>
+          <div class="subheading mb-3" style="text-transform: none;">Data2Bots Inc., Gelderland, Netherlands</div>
           <p>
               <ul>
                   <li>Implemented big data pipeline on both Cloudera and Hortonworks software distributions from relational databases like Oracle, Teradata to AWS Simple Storage Service (S3) using Apache Spark, Python, and Scala.</li>
@@ -112,8 +112,8 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
     <div class="resume-content mr-auto">
-    <h3 class="mb-0">Data Engineer</h3>
-    <div class="subheading mb-3">Educative Inc, Bellevue, WA</div>
+    <h3 class="mb-0" style="text-transform: none;">Data Engineer</h3>
+    <div class="subheading mb-3" style="text-transform: none;">Educative Inc, Bellevue, WA</div>
     <p><ul><li>Wrote a 50+ page course on Terraform (AWS) for Data Engineers.</li></ul></p>
     </div>
     <div class="resume-date text-md-right">
@@ -123,8 +123,8 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
     <div class="resume-content mr-auto">
-    <h3 class="mb-0">Senior Data Engineer</h3>
-    <div class="subheading mb-3">Anant Corporation, Washington, DC</div>
+    <h3 class="mb-0" style="text-transform: none;">Senior Data Engineer</h3>
+    <div class="subheading mb-3" style="text-transform: none;">Anant Corporation, Washington, DC</div>
     <p>
       <ul>
           <li>Designed a Data Quality framework for my company's Azure delta lake data validation automation using Great Expectation in Python. Configured Azure appInsight for logging runtime information.</li>
@@ -149,8 +149,8 @@
 
     <div class="resume-item d-flex flex-column flex-md-row">
     <div class="resume-content mr-auto">
-    <h3 class="mb-0">Data Engineer</h3>
-    <div class="subheading mb-3">CNDRO LLC, Houston, Texas</div>
+    <h3 class="mb-0" style="text-transform: none;">Data Engineer</h3>
+    <div class="subheading mb-3" style="text-transform: none;">CNDRO LLC, Houston, Texas</div>
     <p>
       <ul>
           <li>Created a downstream table for economic data from Moodys and weather data from IBM.</li>
@@ -168,8 +168,8 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-          <h3 class="mb-0">Statistician</h3>
-          <div class="subheading mb-3">Oyo State Bureau of Statistics Ibadan, Oyo State, Nigeria</div>
+          <h3 class="mb-0" style="text-transform: none;">Statistician</h3>
+          <div class="subheading mb-3" style="text-transform: none;">Oyo State Bureau of Statistics Ibadan, Oyo State, Nigeria</div>
           <p>
             <ul>
                 <li>Work as one of the data enumerators for field surveys.</li>
@@ -186,8 +186,8 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-          <h3 class="mb-0">Managerial Associate</h3>
-          <div class="subheading mb-3">GreenTurn, London, United Kingdom</div>
+          <h3 class="mb-0" style="text-transform: none;">Managerial Associate</h3>
+          <div class="subheading mb-3" style="text-transform: none;">GreenTurn, London, United Kingdom</div>
           <p>
             <ul>
                 <li>Responsible for modeling business processes for clients for better improvements of business processes.</li>
