projects  in a list

--- a/projects.html
+++ b/projects.html
@@ -65,13 +65,31 @@
     </nav>
 
 <div class="container-fluid p-0">
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
-        <div class="my-auto">
-          <h2 class="mb-5">Projects</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
-        </div>
-      </section>
+  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+      <div class="my-auto">
+        <h2 class="mb-5">Projects</h2>
+        
+        <ul>
+          <li>Apart from being a web developer, I enjoy most of my time being outdoors.</li>
+          <li>In the winter, I am an avid skier and novice ice climber.</li>
+          <li>During the warmer months in Colorado, I enjoy:
+            <ul>
+              <li>Mountain biking</li>
+              <li>Free climbing</li>
+              <li>Kayaking</li>
+            </ul>
+          </li>
+          <li>When forced indoors, I:
+            <ul>
+              <li>Follow a number of sci-fi and fantasy genre movies and television shows</li>
+              <li>Am an aspiring chef</li>
+              <li>Spend a large amount of my free time exploring the latest technology advancements in the front-end web development world</li>
+            </ul>
+          </li>
+        </ul>
+        
+      </div>
+  </section>
 </div>
 
 <!-- Bootstrap core JavaScript -->
