projects  in a list

--- a/projects.html
+++ b/projects.html
@@ -64,32 +64,36 @@
       </div>
     </nav>
 
-<div class="container-fluid p-0">
-  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
-      <div class="my-auto">
-        <h2 class="mb-5">Projects</h2>
-        
-        <ul>
-          <li>Apart from being a web developer, I enjoy most of my time being outdoors.</li>
-          <li>In the winter, I am an avid skier and novice ice climber.</li>
-          <li>During the warmer months in Colorado, I enjoy:
+
+  <div class="container-fluid p-0">
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+            <h2 class="mb-5">Projects</h2>
             <ul>
-              <li>Mountain biking</li>
-              <li>Free climbing</li>
-              <li>Kayaking</li>
+                <li><a href="https://python.plainenglish.io/do-you-really-need-aws-access-key-id-and-secret-access-key-in-your-python-application-5de027312045" target="_blank">Do you really need AWS Access Key ID and Secret Access Key in your Python application?</a></li>
+                <li><a href="https://medium.com/codex/remote-storage-for-flow-deployment-in-prefect-26801b887e25" target="_blank">Using AWS S3 Bucket for Flow Storage Block in Prefect Deployment</a></li>
+                <li><a href="https://medium.com/geekculture/deployment-orchestration-in-prefect-92730510f9fe" target="_blank">How to deploy flows in Prefect (Python and CLI deployment)</a></li>
+                <li><a href="https://medium.com/codex/airflow-and-spark-running-spark-jobs-on-airflow-docker-based-solution-fc6cc8794c9b" target="_blank">Airflow and Spark: Running Spark Jobs on Airflow (Docker-based Solution)</a></li>
+                <li><a href="https://medium.com/codex/ci-cd-pipeline-for-data-engineering-workloads-with-github-action-18c4a0d31527" target="_blank">Set Up CI/CD Pipeline for Data Engineering Workloads with GitHub Actions</a></li>
+                <li><a href="https://medium.com/codex/change-data-capture-cdc-from-postgres-to-snowflake-60c9c577fb87" target="_blank">Change Data Capture (CDC) from Postgres to Snowflake</a></li>
+                <li><a href="https://medium.com/geekculture/dataops-using-lakefs-for-data-version-control-6ef5ddd65ebe" target="_blank">DataOps: Using LakeFS for Data Version Control</a></li>
+                <li><a href="https://medium.com/@yTechk/yugabytedb-local-deployment-using-docker-compose-file-69965775c416" target="_blank">YugabyteDB Deployment using Docker Compose file</a></li>
+                <li><a href="https://medium.com/codex/airflow-and-cassandra-writing-data-to-cassandra-database-from-airflow-e3ea2b1874c0" target="_blank">Airflow and Cassandra: Writing data to Cassandra database from Airflow</a></li>
+                <li><a href="https://streamsets.com/blog/kafka-streaming-application/" target="_blank">Kafka Streaming: Live Streaming Kafka Application to Cassandra</a></li>
+                <li><a href="https://blog.anant.us/airflow-and-cassandra-writing-to-cassandra-from-airflow/" target="_blank">Airflow and Cassandra: Writing to Cassandra from Airflow</a></li>
+                <li><a href="https://blog.anant.us/using-cadence-and-cassandra-for-workflow-orchestration/" target="_blank">Using Cadence and Cassandra for workflow orchestration</a></li>
+                <li><a href="https://blog.anant.us/getting-started-with-datastax-enterprise-dse-on-docker/" target="_blank">Getting Started with DataStax Enterprise (DSE) on Docker</a></li>
+                <li><a href="https://medium.com/@cndro/loading-data-into-snowflake-table-using-snowsql-client-a066305103bb" target="_blank">Loading Data into Snowflake Table Using SnowSQL Client</a></li>
+                <li><a href="https://medium.com/@cndro/how-to-connect-to-azure-blob-from-alteryx-957205162cfb" target="_blank">How to convert JSON to CSV in Alteryx and Python</a></li>
+                <li><a href="https://medium.com/@cndro/airflow-email-notification-f4b32269f339" target="_blank">Set up Airflow Email Notification</a></li>
+                <li><a href="https://medium.com/@cndro/comparison-of-alteryx-and-fivetran-for-etl-processes-1f5853b55042" target="_blank">A Comparison of Alteryx and Fivetran for ETL Processes</a></li>
+                <li><a href="https://medium.com/@cndro/get-unused-data-sources-in-tableau-server-using-rest-api-f63733041e23" target="_blank">How to get Unused DataSources in Tableau Server Using REST API</a></li>
+                <li><a href="https://medium.com/@cndro/download-tableau-worksheet-views-as-a-csv-or-pdf-file-using-rest-api-tsc-ea582a0e6bd8" target="_blank">How to download Tableau Worksheet Views as a CSV or PDF file using REST API</a></li>
+                <li><a href="https://medium.com/@cndro/how-to-upload-and-download-blobs-from-azure-blob-storage-using-python-6e5306aa7089" target="_blank">How to Upload and Download Blobs from Azure Blob Storage Using Python</a></li>
+                <li><a href="https://medium.com/@cndro/how-to-connect-to-azure-blob-from-alteryx-957205162cfb" target="_blank">How to Connect to Azure Blob from Alteryx</a></li>
             </ul>
-          </li>
-          <li>When forced indoors, I:
-            <ul>
-              <li>Follow a number of sci-fi and fantasy genre movies and television shows</li>
-              <li>Am an aspiring chef</li>
-              <li>Spend a large amount of my free time exploring the latest technology advancements in the front-end web development world</li>
-            </ul>
-          </li>
-        </ul>
-        
-      </div>
-  </section>
+        </div>
+    </section>
 </div>
 
 <!-- Bootstrap core JavaScript -->
