projects summary in list

--- a/projects.html
+++ b/projects.html
@@ -70,19 +70,35 @@
         <div class="my-auto">
             <h2 class="mb-5">Projects</h2>
             <ul>
-                <li><a href="https://python.plainenglish.io/do-you-really-need-aws-access-key-id-and-secret-access-key-in-your-python-application-5de027312045" target="_blank">Do you really need AWS Access Key ID and Secret Access Key in your Python application?</a></li>
-                <li><a href="https://medium.com/codex/remote-storage-for-flow-deployment-in-prefect-26801b887e25" target="_blank">Using AWS S3 Bucket for Flow Storage Block in Prefect Deployment</a></li>
-                <li><a href="https://medium.com/geekculture/deployment-orchestration-in-prefect-92730510f9fe" target="_blank">How to deploy flows in Prefect (Python and CLI deployment)</a></li>
-                <li><a href="https://medium.com/codex/airflow-and-spark-running-spark-jobs-on-airflow-docker-based-solution-fc6cc8794c9b" target="_blank">Airflow and Spark: Running Spark Jobs on Airflow (Docker-based Solution)</a></li>
-                <li><a href="https://medium.com/codex/ci-cd-pipeline-for-data-engineering-workloads-with-github-action-18c4a0d31527" target="_blank">Set Up CI/CD Pipeline for Data Engineering Workloads with GitHub Actions</a></li>
-                <li><a href="https://medium.com/codex/change-data-capture-cdc-from-postgres-to-snowflake-60c9c577fb87" target="_blank">Change Data Capture (CDC) from Postgres to Snowflake</a></li>
-                <li><a href="https://medium.com/geekculture/dataops-using-lakefs-for-data-version-control-6ef5ddd65ebe" target="_blank">DataOps: Using LakeFS for Data Version Control</a></li>
-                <li><a href="https://medium.com/@yTechk/yugabytedb-local-deployment-using-docker-compose-file-69965775c416" target="_blank">YugabyteDB Deployment using Docker Compose file</a></li>
+                <li><a href="https://python.plainenglish.io/do-you-really-need-aws-access-key-id-and-secret-access-key-in-your-python-application-5de027312045" target="_blank">Do you really need AWS Access Key ID and Secret Access Key in your Python application?</a>
+                  <p>This article emphasizes the importance of security in data engineering, particularly when working with cloud platforms like AWS, to safeguard business infrastructure and data integrity. It provides a detailed guide on using AWS Assume Role and IAM tools to securely grant Python applications temporary access to necessary AWS resources, ensuring minimal exposure and enhanced control over permissions.</p>
+                </li>
+                <li><a href="https://medium.com/codex/remote-storage-for-flow-deployment-in-prefect-26801b887e25" target="_blank">Using AWS S3 Bucket for Flow Storage Block in Prefect Deployment</a>
+                  <p>This article explores the process of using AWS S3 as remote storage for Prefect flows, enabling secure, scalable, and distributed deployments. It details the steps to configure an S3 bucket, create Prefect storage and ECS task blocks, and deploy Prefect flows, highlighting the benefits of remote storage for fault tolerance and enhanced deployment efficiency.</p>
+                </li>
+                <li><a href="https://medium.com/geekculture/deployment-orchestration-in-prefect-92730510f9fe" target="_blank">How to deploy flows in Prefect (Python and CLI deployment)</a>
+                  <p>This article explains how to deploy Prefect flows using two methods: Python scripts and the Prefect CLI. It highlights Prefect's flexibility in orchestrating Python workflows, details setting up the environment, and demonstrates both deployment methods to make flows production-ready for scalable and fault-tolerant execution.</p>
+                </li>
+                <li><a href="https://medium.com/codex/airflow-and-spark-running-spark-jobs-on-airflow-docker-based-solution-fc6cc8794c9b" target="_blank">Airflow and Spark: Running Spark Jobs on Airflow (Docker-based Solution)</a>
+                  <p>This article provides a step-by-step guide to deploying Apache Spark and Apache Airflow on Docker containers, enabling seamless scheduling and execution of Spark jobs through Airflow. It highlights the benefits of Docker for dependency management, portability, and scalability, and demonstrates how to configure and test Spark and Airflow before integrating them into a unified ETL pipeline.</p>
+                </li>
+                <li><a href="https://medium.com/codex/ci-cd-pipeline-for-data-engineering-workloads-with-github-action-18c4a0d31527" target="_blank">Set Up CI/CD Pipeline for Data Engineering Workloads with GitHub Actions</a>
+                  <p>This article demonstrates how to set up a CI/CD pipeline for data engineering workloads using GitHub Actions, focusing on deploying infrastructure as code with Terraform and AWS. It outlines steps to automate testing, provisioning, and deployment processes, enhancing efficiency, reliability, and collaboration in managing data engineering workflows.</p>
+                </li>
+                <li><a href="https://medium.com/codex/change-data-capture-cdc-from-postgres-to-snowflake-60c9c577fb87" target="_blank">Change Data Capture (CDC) from Postgres to Snowflake</a>
+                  <p>This article explains how to implement Change Data Capture (CDC) from a PostgreSQL database to Snowflake using Debezium, Kafka, and Python. It walks through setting up Dockerized resources, configuring CDC via log-based methods for real-time data streaming, and processing changes into Snowflake, ensuring data synchronization and fault tolerance.</p>
+                </li>
+                <li><a href="https://medium.com/geekculture/dataops-using-lakefs-for-data-version-control-6ef5ddd65ebe" target="_blank">DataOps: Using LakeFS for Data Version Control</a>
+                  <p>This article introduces LakeFS as a solution for data version control, enabling data engineers to track, test, and manage changes in data similar to how Git is used for code. By integrating LakeFS with AWS S3, the article demonstrates setting up repositories, creating branches, simulating data issues, and rolling back to previous versions to ensure data integrity and seamless operations in data pipelines.</p>
+                </li>
+                <li><a href="https://medium.com/@yTechk/yugabytedb-local-deployment-using-docker-compose-file-69965775c416" target="_blank">YugabyteDB Deployment using Docker Compose file</a>
+                  <p>This article provides a guide to deploying a local YugabyteDB cluster using a Docker Compose file, highlighting the simplicity and efficiency of containerized development. It includes steps for setting up the cluster, verifying its functionality, and loading sample data using the PostgreSQL API, making it an ideal solution for testing, proof of concept, and development workflows.</p>
+                </li>
                 <li><a href="https://medium.com/codex/airflow-and-cassandra-writing-data-to-cassandra-database-from-airflow-e3ea2b1874c0" target="_blank">Airflow and Cassandra: Writing data to Cassandra database from Airflow</a></li>
                 <li><a href="https://streamsets.com/blog/kafka-streaming-application/" target="_blank">Kafka Streaming: Live Streaming Kafka Application to Cassandra</a></li>
-                <li><a href="https://blog.anant.us/airflow-and-cassandra-writing-to-cassandra-from-airflow/" target="_blank">Airflow and Cassandra: Writing to Cassandra from Airflow</a></li>
-                <li><a href="https://blog.anant.us/using-cadence-and-cassandra-for-workflow-orchestration/" target="_blank">Using Cadence and Cassandra for workflow orchestration</a></li>
-                <li><a href="https://blog.anant.us/getting-started-with-datastax-enterprise-dse-on-docker/" target="_blank">Getting Started with DataStax Enterprise (DSE) on Docker</a></li>
+                <li><a href="https://anant.us/blog/airflow-and-cassandra-writing-to-cassandra-from-airflow/" target="_blank">Airflow and Cassandra: Writing to Cassandra from Airflow</a></li>
+                <li><a href="https://anant.us/blog/using-cadence-and-cassandra-for-workflow-orchestration/" target="_blank">Using Cadence and Cassandra for workflow orchestration</a></li>
+                <li><a href="https://anant.us/blog/getting-started-with-datastax-enterprise-dse-on-docker/" target="_blank">Getting Started with DataStax Enterprise (DSE) on Docker</a></li>
                 <li><a href="https://medium.com/@cndro/loading-data-into-snowflake-table-using-snowsql-client-a066305103bb" target="_blank">Loading Data into Snowflake Table Using SnowSQL Client</a></li>
                 <li><a href="https://medium.com/@cndro/how-to-connect-to-azure-blob-from-alteryx-957205162cfb" target="_blank">How to convert JSON to CSV in Alteryx and Python</a></li>
                 <li><a href="https://medium.com/@cndro/airflow-email-notification-f4b32269f339" target="_blank">Set up Airflow Email Notification</a></li>
