update about and index

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="subheading mb-5" style="text-transform: none;">Atlanta, GA · (678) 531-2085 ·
         <a href="mailto:oomolayo2@gsu.edu" style="text-transform: none; color: inherit;">oomolayo2@gsu.edu</a>
       </div>
-      <p class="mb-5">Accomplished Senior data engineer with expertise in designing, developing, and maintaining large-scale data systems; having 
+      <p class="mb-5">Graduate Assistant at Georgia State University and an accomplished Senior data engineer with expertise in designing, developing, and maintaining large-scale data systems; having 
         a proven track record of delivering high-performing data pipelines, architectures, and solutions that drive business growth.</p>
       <ul class="list-inline list-social-icons mb-0">
         <li class="list-inline-item">
